// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/IconButton edit icon button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c1 svg {
  display: block;
}

.c1 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c1:hover {
  background-color: rgb(33,18,94);
}

.c1:hover svg path {
  fill: #fff;
}

<div
  className="c0"
>
  <div
    className="icon_button c1"
    data-cy="icon_button"
  >
    <svg
      height={19}
      viewBox="0 0 32 32"
      width={19}
    >
      <path
        d="M30.61,1.39A4.78,4.78,0,0,0,27.24,0h0a4.77,4.77,0,0,0-3.35,1.39L9.32,16a1.63,1.63,0,0,0-.39.64L6.72,23.22a1.62,1.62,0,0,0,1,2.06,1.52,1.52,0,0,0,1,0l6.63-2.21a1.63,1.63,0,0,0,.64-.39L30.61,8.12a4.77,4.77,0,0,0,0-6.73ZM28.74,4.76a1.52,1.52,0,0,1-.44,1.06L14,20.1l-3.18,1.06L11.9,18,26.18,3.71a1.47,1.47,0,0,1,1.06-.44h0a1.5,1.5,0,0,1,1.06.44A1.48,1.48,0,0,1,28.74,4.76ZM27.58,17.11V28.16A3.85,3.85,0,0,1,23.74,32H3.84A3.84,3.84,0,0,1,0,28.16V6.05A3.84,3.84,0,0,1,3.84,2.21H17.1a1.63,1.63,0,1,1,0,3.26H3.84a.58.58,0,0,0-.58.58V28.16a.58.58,0,0,0,.58.58h19.9a.58.58,0,0,0,.58-.58v-11a1.63,1.63,0,1,1,3.26,0Z"
        fill="#00B0CA"
      />
    </svg>
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/IconButton trash icon button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c1 svg {
  display: block;
}

.c1 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c1:hover {
  background-color: rgb(33,18,94);
}

.c1:hover svg path {
  fill: #fff;
}

<div
  className="c0"
>
  <div
    className="icon_button c1"
    data-cy="icon_button"
  >
    <svg
      height={22}
      viewBox="0 0 32 32"
      width={22}
    >
      <path
        d="M12.35,3.23h7.3a1.62,1.62,0,0,0,1.61-1.61A1.62,1.62,0,0,0,19.65,0h-7.3c-.88-.15-1.46.58-1.46,1.6A1.42,1.42,0,0,0,12.35,3.23ZM27.24,4.69H4.9A1.63,1.63,0,0,0,3.44,6.44,1.57,1.57,0,0,0,4.9,7.9H24V27a1.62,1.62,0,0,1-1.6,1.61H9.57A1.62,1.62,0,0,1,8,27V12.72a1.61,1.61,0,0,0-3.21,0V27.18A4.76,4.76,0,0,0,9.57,32H22.28a4.77,4.77,0,0,0,4.82-4.82V8.05A1.63,1.63,0,0,0,28.56,6.3C28.56,5.42,28.12,5,27.24,4.69Z"
        fill="#00B0CA"
      />
    </svg>
  </div>
  <div
    className="c2"
  />
</div>
`;
